--- a/index.html
+++ b/index.html
@@ -32,14 +32,15 @@
       <div>
         <button class="btn btn-sm bg-yellow-400 text-black hover:bg-yellow-300 rounded-full px-4">
           Plant a Tree
-        </button>
-      </div>
+        </button> </div>
+        <div class="md:hidden">
+      <button id="menu-btn" class="btn btn-sm bg-yellow-400 text-black">Menu</button>
+    </div>
+     
     </div>
   </nav>
     <!-- Mobile Menu Button -->
-    <div class="md:hidden">
-      <button id="menu-btn" class="btn btn-sm bg-yellow-400 text-black">Menu</button>
-    </div>
+    
   </div>
 
   <!-- Mobile Dropdown -->
